Fix a button styling bug on mobile iOS

--- a/FABCSS.formsAndButtons.less
+++ b/FABCSS.formsAndButtons.less
@@ -167,6 +167,7 @@ button:focus {
 	display: inline-block;
 }
 .button {
+	-webkit-appearance: none;
 	-webkit-tap-highlight-color: @buttonColor;
 	text-align: center;
 	background-color: @buttonBackground;
